--- a/GuessNumber/index.html
+++ b/GuessNumber/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <button class="Again btn" onclick="reset()">Again!</button>
+        <button class="Again btn" id="again">Again!</button>
         <h1 class="guessTxt">Guess The Number</h1>
         <h3 class="betweenTxt">(Between 1 to 20)</h3>
         <p class="scoreResult" id="result"></p>
     </header>
     <section class="left">
         <input class="input" type="number" id="guess"/><br/>
-        <button class="btn check" onclick="check()">Check!</button>
+        <button class="btn check" id="check">Check!</button>
     </section>
     <section class="right">
         <p id="msg"></p>
