--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>I'm Robo</h1>
+    <button id="poll">Answer Poll!!</button>
     <script src="index.js"></script>
 </body>
 </html>
