--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <title>Bankist</title>
   </head>
   <body>
+
+    <form id="GB" name="GB" onsubmit="testSubmit()">
+      <input type="text" id="test" required />
+      <button type="button" id="btn" onclick="testFunc()">submit</button>
+    </form>
+
+
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
@@ -122,7 +129,7 @@
     <!-- <footer>
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
-
+    
     <script src="index.js"></script>
   </body>
 </html>
